2011-03-24  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=32821
        Fix conditionals which had an int for one case and a pointer for another.
        Fix is similar to https://bugs.webkit.org/show_bug.cgi?id=56198

        No new tests. Fix compilation on Solaris 10 with SunStudio 12 C++

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::valueForShadow):

Canonical link: https://commits.webkit.org/71683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81869 268f45cc-cd09-0410-ab3c-d52691b4dbfc